Revision history for Lingua-Identify-CLD

0.02_07 Tue Jan 10 17:07:07 WET 2012    
        - Added debuging info output.
        - Added more language tests.

0.02_06 Fri Jan  6 22:20:38 WET 2012
        - fixed DragonFly BSD support.

0.02_05 Fri Jan  6 21:30:38 WET 2012
        - trying my luck with DragonFly BSD.
        - adding tld hint support, first step.

0.02_04 Wed Jan  4 21:31:01 WET 2012
        - trying my luck with PPC darwin

0.02_03 Mon Jan  2 18:18:27 WET 2012
        - trying my luck for NetBSD (again).
          Probably good idea to depend on ExtUtils::CppGuess

0.02_02 Sun Jan  1 15:24:34 WET 2012
        - patched testing procedure to handle Solaris

0.02_01 Sun Jan  1 13:48:20 WET 2012
        - patched cld code to handle Net-BSD

0.01    Sat Dec 31 14:05:00 WET 2011
        - added a cleaner interface (still simple, but ready to grow)
        - added tests for some usual languages

0.01_02 Sat Dec 31 13:16:32 WET 2011
        - fixed installation procedure (hopefully)

0.01_01 Fri Dec 30 19:59:36 WET 2011
        - stupidiest interface possible to Compact Language Detection library
