@@ -106,8 +106,8 @@ ppport.h
 README
 t/00-load.t
 t/01-identify.t
+t/02-html.t
 t/manifest.t
 t/pod-coverage.t
 t/pod.t
 typemap
-META.json
